trunk/Archive2/68/922068a64e22f9/output
main.cpp: In instantiation of 'const int H<E>::value':
main.cpp:16:28:   required from here
main.cpp:11:35: error: no match for 'operator~' (operand type is 'E')
   static const int value = sizeof ~make<Rhs>();
                                   ^
